// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for the off.json config alias.rb matches expected output 1`] = `
"# frozen_string_literal: true

# rubocop:disable Style/GlobalVars
class AliasTest < Minitest::Test
  def test_plain_alias
    assert_equal \\"plain alias\\", foo
  end

  def test_global_alias
    $bar = \\"global alias\\"
    assert_equal \\"global alias\\", $foo
  end

  private

  def baz
    \\"plain alias\\"
  end

  alias bar baz # inline comment
  alias foo bar
  alias $foo $bar
end
# rubocop:enable Style/GlobalVars
"
`;

exports[`for the on.json config alias.rb matches expected output 1`] = `
"# frozen_string_literal: true

# rubocop:disable Style/GlobalVars
class AliasTest < Minitest::Test
  def test_plain_alias
    assert_equal 'plain alias', foo
  end

  def test_global_alias
    $bar = 'global alias'
    assert_equal 'global alias', $foo
  end

  private

  def baz
    'plain alias'
  end

  alias bar baz # inline comment
  alias foo bar
  alias $foo $bar
end
# rubocop:enable Style/GlobalVars
"
`;
